Add manaca landing page with leads and receivables logic

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,27 +1,28 @@
 .navbar {
-  height: 70px;
+  height: 120px;
   position: fixed;
   width: 100vw;
   padding: 0 40px;
   margin: 0;
   z-index: 500;
-  background-color: $main-color;
+  background-color: white;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
+  box-shadow: 5px 5px 5px 5px rgba(200, 200, 200, 0.1);
   a {
     text-decoration: none;
     font-size: 0.8em;
-    background-color: $main-color;
+    background-color: white;
   }
 
   a:hover {
-    background-color: $main-color;
+    background-color: white;
   }
 }
 
 .nav-wrapper {
-  height: 70px;
+  height: 120px;
   width: 100vw;
 }
 
@@ -57,7 +58,7 @@
   }
 
 .logo {
-  height: 40px;
+  height: 70px;
   margin-right: 16px;
 }
 
