--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -10,7 +10,7 @@ $gray: #000000;
 $light-gray: #F4F4F4;
 
 $main-color: #333333;
-
+$manaca-purple: #4166FC;
 
 $dark-grey: #5b5a5e;
 $dark-yellow: #f1cf00;
