--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,16 +1,17 @@
-$footer-height: 140px;
+$footer-height: 120px;
 
 #footer {
   position: absolute;
   bottom: 0;
   width: 100%;
   height: $footer-height;
-  background-color: $dark-grey;
+  background-color: #4266FC;
   color: $white;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
+  box-shadow: 0px -5px 5px 5px rgba(#4266FC, 0.2);
 }
 
 body {
@@ -27,6 +28,10 @@ body {
   margin: 0 16px;
   background-color: rgb(40, 40, 40);
   padding: 8px;
+}
+
+.footer-logo {
+  height: 40px;
 }
 
 
