--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,8 +1,8 @@
 <div id="footer">
   <div class="footer-logo">
-    <%= image_tag 'logo.png', class: "logo" %>
+    <%= image_tag 'manaca-logo-horizontal-b@3x.png', class: "footer-logo" %>
   </div>
-  <div class="footer-social">
+  <!-- <div class="footer-social">
 
     <%= link_to root_path do %>
     <i class="fab fa-google-plus-g social-button text-center"></i>
@@ -16,6 +16,6 @@
     <i class="fab fa-instagram social-button text-center"></i>
     <% end %>
 
-  </div>
+  </div> -->
 
 </div>
