--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -2,20 +2,7 @@
   <div class="footer-logo">
     <%= image_tag 'manaca-logo-horizontal-b@3x.png', class: "footer-logo" %>
   </div>
-  <!-- <div class="footer-social">
-
-    <%= link_to root_path do %>
-    <i class="fab fa-google-plus-g social-button text-center"></i>
-    <% end %>
-
-    <%= link_to root_path do %>
-    <i class="fab fa-facebook-f social-button text-center"></i>
-    <% end %>
-
-    <%= link_to root_path do %>
-    <i class="fab fa-instagram social-button text-center"></i>
-    <% end %>
-
-  </div> -->
-
+  <div class="footer-copyright">
+    <p>Desenvolvido por <a href="http://www.hortalab.com/" target="_blank">HortaTech <%= image_tag "horta-favicon.png", class: "hortalab-icon" %></a> <span style="font-size: 0.6em;"> @2019</span></p>
+  </div>
 </div>
