--- a/app/views/leads/new.html.erb
+++ b/app/views/leads/new.html.erb
@@ -1,6 +1,7 @@
 <%= simple_form_for @lead do |lead| %>
   <button type="button" id="upload_nota_button" class="text-center" onclick="document.getElementById('lead_invoice').click();" >UPLOAD NOTA FISCAL
   </button>
+  <p id="invoice_filename"></p>
   <div id="nota_errors"></div>
   <%= lead.input :invoice, input_html: {class: "hidden"}, label: false %>
   <%= lead.input :invoice_cache, as: :hidden %>
