--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -2,9 +2,9 @@
   color: white;
   text-align: center;
   width: 100vw;
-  height: 220px;
+  height: 400px;
   /* if you have a 70px navbar => height: calc(100vh - 70px); */
-  background: image-url('banner_home.png');
+  background: image-url('banner_home.jpg');
   background-size: cover !important;
   background-position: center center;
   display: flex;
@@ -12,38 +12,31 @@
   justify-content: center;
   margin: 0;
   padding: 0;
-  h1 {
-    font-size: 50px;
-    font-weight: bold;
+
+}
+
+.banner-content {
+  background-color: $manaca-purple;
+  border-radius: 10px;
+  color: white;
+  box-shadow: 5px 2px 10px 4px rgba(80, 80, 80, 0.2);
+  padding: 16px;
+    h4 {
+    font-size: 32px;
     text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
-  }
-  p {
-  font-size: 25px;
-  font-weight: lighter;
-  color: #tbc-white;
-  opacity: 0.6;
-  margin-bottom: 30px;
   }
 }
 
-.banner-logo {
-  height: 84px;
-  margin-bottom: 10px;
-}
-.banner-text {
-  position: relative;
-}
-.banner-dash-left {
-  border-bottom: 3px solid $dark-yellow;
-  position: absolute;
-  top: 50%;
-  left: -28px;
-  width: 60px;
-}
-.banner-dash-right {
-  border-bottom: 3px solid $dark-yellow;
-  position: absolute;
-  top: 50%;
-  right: -28px;
-  width: 60px;
+@media (max-width: 576px) {
+  .banner {
+    height: 200px;
+  }
+  .banner-content {
+
+    padding: 8px;
+      h4 {
+      font-size: 18px;
+      text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
+    }
+  }
 }
