Style and structure improvements

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -19,6 +19,7 @@ body {
   position: relative !important;
   min-height: 100vh !important;
   padding-bottom: $footer-height !important;
+  background-color: white;
 }
 
 .social-button {
