--- a/app/views/leads/success.html.erb
+++ b/app/views/leads/success.html.erb
@@ -1,1 +1,2 @@
-<h3 class="wrapper-title">Obrigado! Entraremos em contato em breve!</h3>
+<h3 class="wrapper-title">Obrigado!</h3>
+<p class="wrapper-title">Em breve, um dos nossos consultores financeiros entrará em contato!</p>
