--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,7 +8,7 @@
 <div class="nav-wrapper" id="nav-wrapper">
   <div class="navbar" id="navbar">
     <%= link_to root_path, class: "nav-item-logo" do %>
-      <%= image_tag 'logo.png', class: "logo" %>
+      <%= image_tag 'manaca-logo-horizontal@2x.png', class: "logo" %>
     <% end %>
   </div>
 </div>
