--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -2,7 +2,7 @@
   height: 110px;
   position: fixed;
   width: 100vw;
-  padding: 0 40px;
+  padding: 0 30px;
   margin: 0;
   z-index: 500;
   background-color: white;
@@ -66,4 +66,32 @@
   font-size: 24px !important;
   padding: 0 20px;
   color: $white;
+}
+
+.social {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 100px;
+  color: rgba(0,0,0,0.3);
+}
+.social-links {
+  display: flex;
+  align-items: center;
+}
+
+.social-links a {
+  color: #4F82FC;
+  text-decoration: none;
+  font-size: 24px;
+  padding: 0px 10px;
+}
+.social-links a:hover {
+  color: #4F82FC;
+  opacity: 0.3;
+}
+
+.social-icon {
+  width: 42px;
+  color: white;
 }
