--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,7 @@
 // Your CSS partials
 @import "layouts/index";
 @import "components/index";
+@import "components/footer_dark";
 @import "pages/index";
 
 // Styles that apply for the entire application
