--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,8 +1,48 @@
-<div id="footer">
-  <div class="footer-logo">
-    <%= image_tag 'manaca-logo-horizontal-b@3x.png', class: "footer-logo" %>
-  </div>
-  <div class="footer-copyright">
-    <p>Desenvolvido por <a href="http://www.hortalab.com/" target="_blank">HortaTech <%= image_tag "horta-favicon.png", class: "hortalab-icon" %></a> <span style="font-size: 0.6em;"> @2019</span></p>
-  </div>
+<div class="footer-dark">
+    <footer>
+        <div class="container">
+            <div class="row">
+
+
+             <div class="col-sm-3 col-md-3 item">
+           <div class="logo">
+            <img src="/assets/manaca-logo-horizontal-b.png" />
+            </div>
+            <div class="item social">
+                <a href="https://www.facebook.com/manacacapital/" target="_blank"><i class="icon ion-social-facebook"></i></a>
+                <a href="https://www.instagram.com/manacacapital/" target="_blank"><i class="icon ion-social-instagram"></i></a>
+                <a href="https://www.linkedin.com/company/manacacapital/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+            </div>
+            </div>
+
+                <div class="col-sm-3 col-md-3 item">
+                    <h3>ANTECIPAR</h3>
+                    <ul>
+                        <li><a href="/HowWorks">Como Funciona</a></li>
+                        <li><a href="/CommonQuestions">Perguntas Frequentes</a></li>
+                        <li><a href="/Simulator">Simule uma operação</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-3 col-md-3 item">
+                    <h3>SOBRE A MANACÁ</h3>
+                    <ul>
+                        <li><a href="/about">Por quê escolher <br>a manacá?</a></li>
+                         <li><a href="/careers">Carreiras</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3 item text">
+                    <h3>MANACÁ CAPITAL</h3>
+                    <p style="color: #f6f6f6;">A Manacá está revolucionando a antecipação de recebíveis oferecendo a taxa mais baixa do mercado com o máximo de transparência</p>
+                </div>
+            </div>
+            <p class="copyright" style="color: #f6f6f6;">manacá © 2019</p>
+        </div>
+        <div class="footer-copyright">
+          <p>Desenvolvido por <a href="http://www.hortalab.com/" target="_blank">HortaTech <%= image_tag "horta-favicon.png", class: "hortalab-icon" %></a> <span style="font-size: 0.6em;"> @2019</span></p>
+        </div>
+    </footer>
 </div>
+
+
+
+
