--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -2,7 +2,7 @@
   height: 110px;
   position: fixed;
   width: 100vw;
-  padding: 0 30px;
+  padding: 0 29px;
   margin: 0;
   z-index: 500;
   background-color: white;
@@ -73,7 +73,7 @@
   align-items: center;
   justify-content: space-between;
   height: 100px;
-  color: rgba(0,0,0,0.3);
+  color: rgba(0,0,0, 0.3);
 }
 .social-links {
   display: flex;
@@ -93,5 +93,6 @@
 
 .social-icon {
   width: 42px;
-  color: white;
+  border: 2px solid #4F82FC;
+  border-radius: 50%;
 }
