--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -41,6 +41,13 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'Avenir';
+  src: font-url('AVENIRLTSTD-LIGHT.OTF') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
 
 $body-font: "Roboto", "Helvetica", "sans-serif";
 $headers-font: "Roboto", "Helvetica", "sans-serif";
