--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,7 @@
 @import "layouts/index";
 @import "components/index";
 @import "components/footer_dark";
+@import "components/simulate";
 @import "pages/index";
 
 // Styles that apply for the entire application
