--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,88 +14,103 @@
   <body>
     <%= render 'shared/navbar' %>
     <%= render 'shared/flashes' %>
-    <section id="banner">
-      <div class="banner">
-        <div class="banner-content">
-          <h4 class="banner-text">Antecipe já!</h4>
-          <h4 class="banner-text">Rápido, fácil e transparente.</h4>
+
+    <!-- SIMULATE SECTION -->
+    <section id="simulate">
+      <div class="simulate ">
+        <div class="simulate-card">
+          <h1><spam style="color: #2c4687">Simule uma </spam>antecipação.</h1>
+        </div>
+        <div id="simulate-card" class="simulate-card card-border">
+          <%= image_tag "imagens/pencil.png", class: 'pencil' %>
+          <p>Clique aqui para<br> inicar a simulação</p>
         </div>
       </div>
     </section>
+
+    <!-- BANNER SECTION -->
+    <section id="banner">
+      <div class="banner">
+        <div class="banner-content">
+          <h4 class="banner-text">Antecipe seu sucesso.</h4>
+          <p class="banner-text">A Manacá está revolucionando a antecipação de recebíveis oferecendo a taxa mais baixa do mercado com o máximo de transparência.</p>
+          <div id="click-simulate" class="button">Faça sua simulação</div>
+        </div>
+          <%= image_tag 'footersymbol.png', class: "banner-logo" %>
+      </div>
+    </section>
+
+
+    <!-- INPUT CONTAINER -->
     <div class="container">
       <div class="col-12 offset-sm-3 col-sm-6">
-        <div class="invoice-wrapper">
+        <div id="input-data" class="hidden invoice-wrapper">
           <%= image_tag 'manaca-icon.png', class: 'invoice-wrapper-logo' %>
           <%= yield %>
-        </div>
-
-        <section id="hashtags">
-          <div class="hashtags-box">
-            <span class="hashtags-promo">#AGenteConfiaAntes</span>
-            <span class="hashtags-promo">#AntecipeSeuSucesso</span>
-          </div>
-          <div class="hashtags-box">
-            <span class="hashtags-promo">#semTAC</span>
-            <span class="hashtags-promo">#semTED</span>
-            <span class="hashtags-promo">#semIOF</span>
-          </div>
-          <div class="hashtags-box">
-            <span class="hashtags-promo">#ZeroTaxaBoleto</span>
-            <span class="hashtags-promo">#ZeroTaxaConsultaSerasa</span>
-          </div>
         </div>
       </div>
     </div>
 
-
-    <div class="container">
-
-      <section id="parceiros">
-        <h2 class="secondary-title text-center">Parceiros</h2>
-        <div class="row parceiros">
-          <div class="col-12 col-sm-6 col-md-3">
-            <%= image_tag "itau.svg", class: 'logo-parceiros' %>
-          </div>
-          <div class="col-12 col-sm-6 col-md-3">
-            <%= image_tag "serasa-experian-logo.png", class: 'logo-parceiros' %>
-          </div>
-          <div class="col-12 col-sm-6 col-md-3">
-            <%= image_tag "crdc_horiz-01.jpg", class: 'logo-parceiros' %>
-          </div>
-          <div class="col-12 col-sm-6 col-md-3">
-            <%= image_tag "logotipo.png", class: 'logo-parceiros' %>
-          </div>
-        </div>
-      </section>
-
-      <section id="depoimentos">
-        <h2 class="secondary-title text-center">Depoimentos</h2>
-        <div class="row">
-          <div class="col-12 col-md-4">
-            <div class="testimonial-wrapper">
-              <p class="testimonial-text">“Muito impressionado com a transparência e simplicidade. Sabia exatamente qual era o custo e quanto ia receber. Recomendo”</p>
-              <p class="testimonial-author">Marcos R.</p>
-              <p class="author-position">Empreendedor - Indústria Metalúrgica</p>
-            </div>
-          </div>
-          <div class="col-12 col-md-4">
-            <div class="testimonial-wrapper">
-              <p class="testimonial-text">“O customer service da Manacá tem sido excelente e facilitou o meu dia dia. A combinação de tecnologia e pessoas faz com que a antecipação seja bastante rápida”</p>
-              <p class="testimonial-author">Pamela C.</p>
-              <p class="author-position">Gerente Financeira - Alimentos e Bebidas</p>
-            </div>
-          </div>
-          <div class="col-12 col-md-4">
-            <div class="testimonial-wrapper">
-              <p class="testimonial-text">“A melhor taxa que encontrei”</p>
-              <p class="testimonial-author">Murilo A.</p>
-              <p class="author-position">Diretor Financeiro - Tecnologia da Informação</p>
-            </div>
-          </div>
-        </div>
-      </section>
+    <!-- HASHTAG FIELD -->
+    <div class="hashtags-field">
+      <div class="hashtags-box">
+        <p class="hashtags">#SomosTodosEmpreendedores</p>
+        <h4>Nós não criamos a Manacá porque gostávamos de factoring.</h4>
+        <p style="color: #4f82fc">Muito pelo contrário.</p>
+        <p>A Manacá foi fundada com a missão de ser o melhor parceiro financeiro que o empreendedor pode ter.<br> Sendo assim, temos como principal objetivo, provar que mesmo em um mercado antigo e burocrático, é possível ser simples, moderno e eficiente.</p>
+      </div>
     </div>
 
+    <!-- HOW IT WORKS -->
+    <div class="card-grid">
+      <h3>Como Funciona.</h3>
+      <div class="card-content">
+        <%= image_tag 'imagens/contact-information-azul.svg', class: 'card-image' %>
+        <h4><spam class="index">01</spam> Cadastre-se online</h4>
+        <p>Inscreva-se em menos de 10 minutos com detalhes básicos sobre sua empresa e seus clientes.</p>
+      </div>
+
+      <div class="card-content">
+        <%= image_tag 'imagens/success.svg', class: 'card-image' %>
+        <h4><spam class="index">02</spam> Seja aprovado</h4>
+        <p>Analisaremos o seu cadastro e em até 48 horas você saberá qual o limite e taxa aprovados.</p>
+      </div>
+
+      <div class="card-content">
+        <%= image_tag 'imagens/writing-azul.svg', class: 'card-image' %>
+        <h4><spam class="index">03</spam> Solicite uma antecipação</h4>
+        <p>Suba suas notas fiscaisna plataforma enviando arquivos .xml ou digitando a operação. Simule e aprove as faturas que deseja antecipar.</p>
+      </div>
+
+      <div class="card-content">
+        <%= image_tag 'imagens/wristwatch-azul.svg', class: 'card-image' %>
+        <h4><spam class="index">04</spam> Receba na hora</h4>
+        <p>Nós aprovamos a operação e pagamos na conta desejada em até duas horas.</p>
+      </div>
+    </div>
+
+
+    <!-- BOX SIMULATE -->
+    <div class="box">
+      <div class="box-simulate">
+        <div><h3>Simule uma operação.</h3></div>
+        <div id="click-btn" class="click-btn"><p>CLIQUE AQUI</p></div>
+      </div>
+    </div>
+
+    <!-- INFOS -->
+    <div id="infos" class="infos">
+      <div class="info-title">
+        Fortaleça seu caixa e <spam>acelere seu conhecimento.</spam>
+      </div>
+      <div class="info-cards">
+        <div class="card">
+          <%= image_tag "imagens/clock.svg", class: "info-icon" %>
+          <h4 class="subtitle">Comece em 5 minutos</h4>
+          <p class="info-text">Cadastro aprovado em até 48 horas e dinheiro na conta em até duas horas após o envio da operação. Rápido para começar, rápido para antecipar.</p>
+        </div>
+      </div>
+    </div>
     <%= render 'shared/footer' %>
     <%= javascript_include_tag 'application' %>
     <%= javascript_pack_tag 'application' %>
